--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
   <h1>Welcome to {{title}}!</h1>
   <label><input [(ngModel)]="title"></label>
+  <button (click)="resetTitle()">reset button</button>
 </div>
